# DCGAN-Implementation

./: .gitignore  CONTRIBUTING.rst  Makefile  README.md  README.rst  log.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
checkpoints/: checkpoint  ckpt-4.index  ckpt-5.index  ckpt-6.index
dcgan/: __init__.py  __main__.py  cli.py  dataset.py  dcgan.py  metrics.py  utils.py  whatif.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
models/disc_trained_20210224-210823/: saved_model.pb
models/disc_trained_20210225-115810/: saved_model.pb
models/disc_trained_20210225-132043/: saved_model.pb
models/disc_trained_20210225-132849/: saved_model.pb
models/disc_trained_20210225-132942/: saved_model.pb
models/disc_trained_20210225-133314/: saved_model.pb
models/disc_trained_20210226-132814/: saved_model.pb
models/disc_trained_20210226-144204/: saved_model.pb
models/disc_trained_20210226-150011/: saved_model.pb
models/disc_trained_20210226-153752/: saved_model.pb
models/disc_trained_20210226-204337/: saved_model.pb
models/disc_trained_20210226-211330/: saved_model.pb
models/gen_trained_20210224-210823/: saved_model.pb
models/gen_trained_20210225-115810/: saved_model.pb
models/gen_trained_20210225-132043/: saved_model.pb
models/gen_trained_20210225-132849/: saved_model.pb
models/gen_trained_20210225-132942/: saved_model.pb
models/gen_trained_20210225-133314/: saved_model.pb
scripts/: download_dataset.py  test_bad_data.py
tests/: __init__.py  test_tf_examples.py
(+53 files in other folders)
