[tool.poetry]
name = "dcgan"
version = "0.1.0"
description = "Simple DCGAN implementation for experimenting"
authors = ["Andy Jackson <amjack100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
tensorflow = "^2.4.1"
matplotlib = "^3.3.4"
imageio = "^2.9.0"
ipykernel = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dcgan = 'dcgan.__main__:main'